Open Steamworks/GameCoordinatorCommon.h


typedef enum EGCMsgResponse
{
	k_EGCMsgResponseOK,
	k_EGCMsgResponseDenied,
	k_EGCMsgResponseServerError,
	k_EGCMsgResponseTimeout,
	k_EGCMsgResponseInvalid,
	k_EGCMsgResponseNoMatch,
	k_EGCMsgResponseUnknownError,
	k_EGCMsgResponseNotLoggedOn,
} EGCMsgResponse;
typedef enum EGCResults
{
	k_EGCResultOK = 0,
	k_EGCResultNoMessage = 1,			
	k_EGCResultBufferTooSmall = 2,		
	k_EGCResultNotLoggedOn = 3,			
	k_EGCResultInvalidMessage = 4,		
} EGCResults;
typedef enum EGCMessages
{
	k_EGCMsgGenericReply = 10,
	k_ESOMsg_Create = 21,
	k_ESOMsg_Update,
	k_ESOMsg_Destroy,
	k_ESOMsg_CacheSubscribed,
	k_ESOMsg_CacheUnsubscribed,
	k_EGCMsgAchievementAwarded = 51,
	k_EGCMsgConCommand,
	k_EGCMsgStartPlaying,
	k_EGCMsgStopPlaying,
	k_EGCMsgStartGameserver,
	k_EGCMsgStopGameserver,
	k_EGCMsgWGRequest,
	k_EGCMsgWGResponse,
	k_EGCMsgGetUserGameStatsSchema,
	k_EGCMsgGetUserGameStatsSchemaResponse,
	k_EGCMsgGetUserStatsDEPRECATED,
	k_EGCMsgGetUserStatsResponse,
	k_EGCMsgAppInfoUpdated,
	k_EGCMsgValidateSession,
	k_EGCMsgValidateSessionResponse,
	k_EGCMsgLookupAccountFromInput,
	k_EGCMsgSendHTTPRequest,
	k_EGCMsgSendHTTPRequestResponse,
	k_EGCMsgPreTestSetup,
	k_EGCMsgRecordSupportAction,
	k_EGCMsgGetAccountDetails,
	k_EGCMsgSendInterAppMessage,
	k_EGCMsgReceiveInterAppMessage,
	k_EGCMsgFindAccounts,
	k_EGCMsgPostAlert,
	k_EGCMsgGetLicenses,
	k_EGCMsgGetUserStats,
	k_EGCMsgWebAPIRegisterInterfaces = 101,
	k_EGCMsgWebAPIJobRequest,
	k_EGCMsgWebAPIRegistrationRequested,
	k_EMsgGCSetItemPosition = 1001,
	k_EMsgGCCraft,
	k_EMsgGCCraftResponse,
	k_EMsgGCDelete,
	k_EMsgGCVerifyCacheSubscription,
	k_EMsgGCNameItem,
	k_EMsgGCDecodeItem,
	k_EMsgGCDecodeItemResponse,
	k_EMsgGCPaintItem,
	k_EMsgGCPaintItemResponse,
	k_EMsgGCGoldenWrenchBroadcast,
	k_EMsgGCMOTDRequest,
	k_EMsgGCMOTDRequestResponse,
	k_EMsgGCAddItemToSocket,
	k_EMsgGCAddItemToSocketResponse,
	k_EMsgGCAddSocketToBaseItem,
	k_EMsgGCAddSocketToItem,
	k_EMsgGCAddSocketToItemResponse,
	k_EMsgGCNameBaseItem,
	k_EMsgGCNameBaseItemResponse,
	k_EMsgGCRemoveSocketItem,
	k_EMsgGCRemoveSocketItemResponse,
	k_EMsgGCCustomizeItemTexture,
	k_EMsgGCCustomizeItemTextureResponse,
	k_EMsgGCUseItemRequest,
	k_EMsgGCUseItemResponse,
	k_EMsgGCGiftedItems,
	k_EMsgGCSpawnItem,
	k_EMsgGCRespawnPostLoadoutChange,
	k_EMsgGCRemoveItemName,
	k_EMsgGCRemoveItemPaint,
	k_EMsgGCGiftWrapItem,
	k_EMsgGCGiftWrapItemResponse,
	k_EMsgGCDeliverGift,
	k_EMsgGCDeliverGiftResponseGiver,
	k_EMsgGCDeliverGiftResponseReceiver,
	k_EMsgGCUnwrapGiftRequest,
	k_EMsgGCUnwrapGiftResponse,
	k_EMsgGCTrading_InitiateTradeRequest = 1501,
	k_EMsgGCTrading_InitiateTradeResponse,
	k_EMsgGCTrading_StartSession,
	k_EMsgGCTrading_SetItem,
	k_EMsgGCTrading_RemoveItem,
	k_EMsgGCTrading_UpdateTradeInfo,
	k_EMsgGCTrading_SetReadiness,
	k_EMsgGCTrading_ReadinessResponse,
	k_EMsgGCTrading_SessionClosed,
	k_EMsgGCTrading_CancelSession,
	k_EMsgGCTrading_TradeChatMsg,
	k_EMsgGCTrading_ConfirmOffer,
	k_EMsgGCServerBrowser_FavoriteServer = 1601,
	k_EMsgGCServerBrowser_BlacklistServer,
	k_EMsgGCDev_NewItemRequest = 2001,
	k_EMsgGCDev_NewItemRequestResponse,
	k_EMsgGCSystemMessage = 3001,
	k_EMsgGCReportWarKill = 5001,
	k_EMsgGCCoaching_AddToCoaches,
	k_EMsgGCCoaching_AddToCoachesResponse,
	k_EMsgGCCoaching_RemoveFromCoaches,
	k_EMsgGCCoaching_RemoveFromCoachesResponse,
	k_EMsgGCCoaching_FindCoach,
	k_EMsgGCCoaching_FindCoachResponse,
	k_EMsgGCCoaching_AskCoach,
	k_EMsgGCCoaching_AskCoachResponse,
	k_EMsgGCCoaching_CoachJoinGame,
	k_EMsgGCCoaching_CoachJoining,
	k_EMsgGCCoaching_CoachJoined,
	k_EMsgGCCoaching_LikeCurrentCoach,
	k_EMsgGCLookupAccount,
	k_EMsgGCLookupAccountResponse,
	k_EMsgGCLookupAccountName,
	k_EMsgGCLookupAccountNameResponse,
	k_EMsgGC_RevolvingLootList = 5400,
	k_EMsgGC_Duel_Request = 5500,
	k_EMsgGC_Duel_Response,
	k_EMsgGC_Duel_Results,
	k_EMsgGC_Duel_Status,
	k_EMsgGC_Halloween_ReservedItem = 5600,
	k_EMsgGC_Halloween_GrantItem,
	k_EMsgGC_Halloween_GrantItemResponse = 5604,
	k_EMsgGC_Halloween_Cheat_QueryResponse,
	k_EMsgGC_Halloween_ItemClaimed,
	k_EMsgGC_GameServer_LevelInfo = 5700,
	k_EMsgGC_GameServer_AuthChallenge,
	k_EMsgGC_GameServer_AuthChallengeResponse,
	k_EMsgGC_MM_RequestMatch = 5800,
	k_EMsgGC_MM_RequestMatchResponse,
	k_EMsgGC_MM_ReserveSpot,
	k_EMsgGC_MM_LoadMap,
	k_EMsgGC_PickupItemEligibility_Query = 6000,
	k_EMsgGCDev_GrantWarKill,
	k_EMsgGCTFGetUserData = 7000,
	k_EMsgGCTFGetUserDataResponse,
	k_EMsgGCTFPurchaseInit,
	k_EMsgGCTFPurchaseInitResponse,
	k_EMsgGCTFPurchaseFinalize,
	k_EMsgGCTFPurchaseFinalizeResponse,
	k_EMsgGCTFPurchaseCancel,
	k_EMsgGCTFPurchaseCancelResponse,
	k_EMsgGCTFPurchaseQueryTxn,
	k_EMsgGCTFPurchaseQueryTxnResponse
} EGCMessages;
typedef enum ETFInitTradeResult
{
	k_ETFInitTradeResultOk,
	k_ETFInitTradeResultDeclined, 
	k_ETFInitTradeResultVACBanned, 
	k_ETFInitTradeResultOtherVACBanned, 
	k_ETFInitTradeResultBusy, 
	k_ETFInitTradeResultDisabled, 
	k_ETFInitTradeResultNoLoggedIn, 
	k_ETFInitTradeResultCanceled,
	k_ETFInitTradeResultTooSoon 
} ETFInitTradeResult;
typedef enum ETFTradeResult
{
	k_ETFTradeResultOk,
	k_ETFTradeResultCanceled, 
	k_ETFTradeResultStaleInventory, 
	k_ETFTradeResultUntradeable, 
	k_ETFTradeResultNoItems, 
	k_ETFTradeResultDisabled 
} ETFTradeResult;
struct GCMessageAvailable_t
{
	enum { k_iCallback = k_iSteamGameCoordinatorCallbacks + 1 };
	uint32 m_nMessageSize;
};
struct SOMsgCacheSubscribed_t
{
	enum { k_iMessage = k_ESOMsg_CacheSubscribed };
	uint16 id;
	char garbage[16];
	CSteamID steamid;
	uint32 unknown;
	uint16 padding;
	uint16 itemcount;
};
struct SOMsgCacheSubscribed_Item_t
{
	uint64 itemid;
	uint32 accountid;
	uint16 itemdefindex;
	uint8 itemlevel;
	uint8 itemquality;
	uint32 position;
	uint32 itemcount;
	uint16 namelength;
};
struct SOMsgCacheSubscribed_Item_Attrib_t
{
	uint16 attribindex;
	float value;
};
struct SOMsgCacheUnsubscribed_t
{
	enum { k_iMessage = k_ESOMsg_CacheUnsubscribed };
	uint16 id;
	char garbage[16];
	CSteamID steamid;
};
struct SOMsgCreate_t
{
	enum { k_iMessage = k_ESOMsg_Create };
	uint16 id;
	char garbage[16];
	CSteamID steamid;
	uint32 unknown;
	SOMsgCacheSubscribed_Item_t item;
};
struct SOMsgUpdate_t
{
	enum { k_iMessage = k_ESOMsg_Update };
	uint16 id;
	char garbage[16];
	CSteamID steamid;
	uint32 unk1;
	uint64 itemID;
	uint16 unk2;
	uint32 position;
};
struct SOMsgDeleted_t
{
	enum { k_iMessage = k_ESOMsg_Destroy };
	uint16 id;
	char garbage[16];
	CSteamID steamid;
	uint32 unk1;
	uint64 itemid;
};
struct GCSetItemPosition_t
{
	enum { k_iMessage = k_EMsgGCSetItemPosition };
	uint16 id;
	char garbage[16];
	uint64 itemID;
	uint32 position;
	uint32 unk1;
};
struct GCCraft_t
{
	enum { k_iMessage = k_EMsgGCCraft };
	uint16 id;
	char garbage[16];
	uint16 blueprint;
	uint16 itemcount;
};
struct GCCraftResponse_t
{
	enum { k_iMessage = k_EMsgGCCraftResponse };
	uint16 id;
	char garbage[16];
	uint16 blueprint;
	uint64 unk1;
	uint64 itemid;
};
struct GCDelete_t
{
	enum { k_iMessage = k_EMsgGCDelete };
	uint16 id;
	char garbage[16];
	uint64 itemID;
};
struct GCVerifyCacheSubscription_t
{
	enum { k_iMessage = k_EMsgGCVerifyCacheSubscription };
	uint16 id;
	char garbage[16];
	CSteamID steamid;
};
struct GCGoldenWrenchBroadcast_t
{
	enum { k_iMessage = k_EMsgGCGoldenWrenchBroadcast };
	uint16 id;
	char garbage[16];
	uint16 WrenchNumber;
	uint16 State; 
};
struct GCMOTDRequest_t
{
	enum { k_iMessage = k_EMsgGCMOTDRequest };
	uint16 id;
	char garbage[16];
	uint32 timestamp;
	uint32 unk1;
};
struct GCMOTDRequestResponse_t
{
	enum { k_iMessage = k_EMsgGCMOTDRequestResponse };
	uint16 id;
	char garbage[16];
	uint16 NumberOfNews;
};
struct GC_GameServer_AuthChallenge_t
{
	enum { k_iMessage = k_EMsgGC_GameServer_AuthChallenge };
	uint16 id;
	char garbage[16];
	uint8 unknown; 
};
struct GC_GameServer_AuthChallengeResponse_t
{
	enum { k_iMessage = k_EMsgGC_GameServer_AuthChallengeResponse };
	uint16 id;
	char garbage[16];
	uint32 accountID;
};
struct GC_GameServer_LevelInfo_t
{
	enum { k_iMessage = k_EMsgGC_GameServer_LevelInfo };
	uint16 id;
	char garbage[16];
	uint8 unknown;
};
struct GCTrading_InitiateTradeRequest_t
{
	enum { k_iMessage = k_EMsgGCTrading_InitiateTradeRequest };
	uint16 id;
	char garbage[16];
	uint32 unknown; 
	CSteamID steamID;
};
struct GCTrading_InitiateTradeResponse_t
{
	enum { k_iMessage = k_EMsgGCTrading_InitiateTradeResponse };
	uint16 id;
	char garbage[16];
	ETFInitTradeResult result;
	uint32 unknown; 
};